@@ -35,6 +35,7 @@ import org.apache.solr.client.solrj.io.stream.expr.StreamExpression;
 import org.apache.solr.client.solrj.io.stream.expr.StreamExpressionNamedParameter;
 import org.apache.solr.client.solrj.io.stream.expr.StreamExpressionValue;
 import org.apache.solr.client.solrj.io.stream.expr.StreamFactory;
+import org.apache.solr.client.solrj.util.ClientUtils;
 import org.apache.solr.common.params.ModifiableSolrParams;
 
 import static org.apache.solr.common.params.CommonParams.SORT;
@@ -208,9 +209,8 @@ public class FetchStream extends TupleStream implements Expressible {
   }
 
   private void fetchBatch() throws IOException {
-
     Tuple EOFTuple = null;
-    List<Tuple> batch = new ArrayList();
+    List<Tuple> batch = new ArrayList<>(batchSize);
     for(int i=0; i<batchSize; i++) {
       Tuple tuple = stream.read();
       if(tuple.EOF) {
@@ -222,18 +222,12 @@ public class FetchStream extends TupleStream implements Expressible {
     }
 
     if(batch.size() > 0) {
-      StringBuilder buf = new StringBuilder();
-      buf.append(rightKey);
-      buf.append(":(");
-      for (int i = 0; i < batch.size(); i++) {
-        if (i > 0) {
-          buf.append(" ");
-        }
-        Tuple tuple = batch.get(i);
+      StringBuilder buf = new StringBuilder(batch.size() * 10 + 20);
+      buf.append("{! df=").append(rightKey).append(" q.op=OR cache=false }");//disable queryCache
+      for (Tuple tuple : batch) {
         String key = tuple.getString(leftKey);
-        buf.append(key);
+        buf.append(' ').append(ClientUtils.escapeQueryChars(key));
       }
-      buf.append(")");
 
       ModifiableSolrParams params = new ModifiableSolrParams();
       params.add("q", buf.toString());
@@ -245,7 +239,7 @@ public class FetchStream extends TupleStream implements Expressible {
       StreamContext newContext = new StreamContext();
       newContext.setSolrClientCache(streamContext.getSolrClientCache());
       cloudSolrStream.setStreamContext(newContext);
-      Map<String, Tuple> fetched = new HashMap();
+      Map<String, Tuple> fetched = new HashMap<>();
       try {
         cloudSolrStream.open();
         while (true) {
